@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2010-05-25"
+#define RUBY_RELEASE_DATE "2010-06-07"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20100525
-#define RUBY_PATCHLEVEL 266
+#define RUBY_RELEASE_CODE 20100607
+#define RUBY_PATCHLEVEL 267
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2010
-#define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 25
+#define RUBY_RELEASE_MONTH 6
+#define RUBY_RELEASE_DAY 7
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
